# bang-server

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  git_watcher.cmake  vcpkg.json
src/cards/: CMakeLists.txt  bang_cards.h  bang_cards.yml  card_data.h  card_defs.h  card_effect.cpp  card_effect.h  card_enums.h  card_fwd.h  card_serial.cpp  card_serial.h  cpp_generator.py  effect_context.h  effect_enums.h  effect_list_zip.h  effect_vtable.h  effects.h  equip_vtable.h  event_enums.h  expansion_set.h  filter_enums.h  filters.cpp  filters.h  filters_simple.h  game_enums.h  game_events.h  game_string.h  holders.cpp  holders.h  modifier_vtable.h  mth_unwrapper.h  mth_vtable.h  parse_bang_cards.cpp  parse_bang_cards.py  vtable_build.h  vtable_effect.h  vtable_equip.h  vtable_modifier.h  vtable_mth.h  vtable_ruleset.h  (+1 more)
src/cards/armedanddangerous/: CMakeLists.txt  a_little_nip.cpp  a_little_nip.h  add_cube.cpp  add_cube.h  al_preacher.cpp  al_preacher.h  bandolier.cpp  bandolier.h  belltower.cpp  belltower.h  bigfifty.cpp  bigfifty.h  bloody_mary.cpp  bloody_mary.h  bomb.cpp  bomb.h  buntlinespecial.cpp  buntlinespecial.h  caravan.cpp  caravan.h  doublebarrel.cpp  doublebarrel.h  duck.cpp  duck.h  effects.h  flintlock.cpp  flintlock.h  frankie_canton.cpp  frankie_canton.h  julie_cutter.cpp  julie_cutter.h  ms_abigail.cpp  ms_abigail.h  pay_cube.cpp  pay_cube.h  red_ringo.cpp  red_ringo.h  ruleset.cpp  ruleset.h  (+8 more)
src/cards/base/: CMakeLists.txt  bang.cpp  bang.h  barrel.cpp  barrel.h  bart_cassidy.cpp  bart_cassidy.h  beer.cpp  beer.h  black_jack.cpp  black_jack.h  calamity_janet.cpp  calamity_janet.h  card_choice.cpp  card_choice.h  damage.cpp  damage.h  deathsave.cpp  deathsave.h  discard_all.cpp  discard_all.h  draw.cpp  draw.h  duel.cpp  duel.h  dynamite.cpp  dynamite.h  effects.h  el_gringo.cpp  el_gringo.h  generalstore.cpp  generalstore.h  heal.cpp  heal.h  indians.cpp  indians.h  initialcards.cpp  initialcards.h  jail.cpp  jail.h  (+42 more)
src/cards/canyondiablo/: CMakeLists.txt  bronco.cpp  bronco.h  brothel.cpp  brothel.h  buffalo_bell.cpp  buffalo_bell.h  card_sharper.cpp  card_sharper.h  clash_the_stampede.cpp  clash_the_stampede.h  disarm.cpp  disarm.h  effects.h  eva_place.cpp  eva_place.h  graverobber.cpp  graverobber.h  indianguide.cpp  indianguide.h  lastwill.cpp  lastwill.h  mirage.cpp  mirage.h  packmule.cpp  packmule.h  pat_barrett.cpp  pat_barrett.h  ruleset.cpp  ruleset.h  sacrifice.cpp  sacrifice.h  soundance_kid.cpp  soundance_kid.h  spike_spiezel.cpp  spike_spiezel.h  taxman.cpp  taxman.h  update_max_hp.cpp  update_max_hp.h  (+2 more)
src/cards/dodgecity/: CMakeLists.txt  apache_kid.cpp  apache_kid.h  bellestar.cpp  bellestar.h  bill_noface.cpp  bill_noface.h  claus_the_saint.cpp  claus_the_saint.h  doc_holyday.cpp  doc_holyday.h  effects.h  greg_digger.cpp  greg_digger.h  herb_hunter.cpp  herb_hunter.h  johnny_kisch.cpp  johnny_kisch.h  molly_stark.cpp  molly_stark.h  pixie_pete.cpp  pixie_pete.h  ruleset.cpp  ruleset.h  tequila_joe.cpp  tequila_joe.h  vera_custer.cpp  vera_custer.h
src/cards/fistfulofcards/: CMakeLists.txt  abandonedmine.cpp  abandonedmine.h  ambush.cpp  ambush.h  deadman.cpp  deadman.h  effects.h  fistfulofcards.cpp  fistfulofcards.h  judge.cpp  judge.h  lasso.cpp  lasso.h  lawofthewest.cpp  lawofthewest.h  peyote.cpp  peyote.h  ranch.cpp  ranch.h  ricochet.cpp  ricochet.h  ruleset.cpp  ruleset.h  russianroulette.cpp  russianroulette.h  sniper.cpp  sniper.h  vendetta.cpp  vendetta.h
src/cards/goldrush/: add_cost.cpp  add_cost.h  add_gold.cpp  add_gold.h  discard_black.cpp  discard_black.h  discount.cpp  discount.h  don_bell.cpp  don_bell.h  dutch_will.cpp  dutch_will.h  effects.h  goldrush.h  gunbelt.cpp  gunbelt.h  josh_mccloud.cpp  josh_mccloud.h  luckycharm.cpp  luckycharm.h  madam_yto.cpp  madam_yto.h  pay_gold.cpp  pay_gold.h  ruleset.cpp  ruleset.h  rum.cpp  rum.h  sell_beer.cpp  sell_beer.h  shopchoice.cpp  shopchoice.h  wanted.cpp  wanted.h
src/cards/greattrainrobbery/: CMakeLists.txt  benny_brawler.cpp  benny_brawler.h  cactus.h  cattle_truck.cpp  cattle_truck.h  circus_wagon.cpp  circus_wagon.h  dining_car.cpp  dining_car.h  dragoon.cpp  dragoon.h  effects.h  evaded.cpp  evaded.h  evan_babbit.cpp  evan_babbit.h  express_car.cpp  express_car.h  full_steam.cpp  full_steam.h  ghost_car.cpp  ghost_car.h  ironhorse.cpp  ironhorse.h  knife_revolver.cpp  knife_revolver.h  leland.cpp  leland.h  lounge_car.cpp  lounge_car.h  lumber_flatcar.cpp  lumber_flatcar.h  mail_car.cpp  mail_car.h  manuelita.cpp  manuelita.h  map.cpp  map.h  moneybag.cpp  (+26 more)
src/cards/highnoon/: CMakeLists.txt  blessing.cpp  blessing.h  curse.cpp  curse.h  effects.h  ghosttown.cpp  ghosttown.h  handcuffs.cpp  handcuffs.h  hangover.cpp  hangover.h  highnoon.cpp  highnoon.h  invert_rotation.cpp  invert_rotation.h  newidentity.cpp  newidentity.h  reverend.cpp  reverend.h  ruleset.cpp  ruleset.h  sermon.cpp  sermon.h  shootout.cpp  shootout.h  thedaltons.cpp  thedaltons.h  thedoctor.cpp  thedoctor.h  thirst.cpp  thirst.h  trainarrival.cpp  trainarrival.h
src/cards/thebullet/: CMakeLists.txt  claus_the_saint.cpp  claus_the_saint.h  effects.h  emiliano.cpp  emiliano.h  handcuffs.cpp  handcuffs.h  johnny_kisch.h  newidentity.cpp  newidentity.h
src/cards/valleyofshadows/: CMakeLists.txt  aim.cpp  aim.h  backfire.cpp  backfire.h  bandidos.cpp  bandidos.h  bounty.cpp  bounty.h  colorado_bill.cpp  colorado_bill.h  effects.h  escape.cpp  escape.h  evelyn_shebang.cpp  evelyn_shebang.h  fanning.cpp  fanning.h  ghost.cpp  ghost.h  henry_block.cpp  henry_block.h  lemonade_jim.cpp  lemonade_jim.h  mick_defender.cpp  mick_defender.h  play_as_gatling.cpp  play_as_gatling.h  poker.cpp  poker.h  ruleset.cpp  saved.cpp  saved.h  shotgun.cpp  shotgun.h  snake.cpp  snake.h  tornado.cpp  tornado.h  tuco_franziskaner.cpp  (+1 more)
src/cards/wildwestshow/: CMakeLists.txt  big_spencer.cpp  big_spencer.h  bone_orchard.h  (+34 more)
src/config/: CMakeLists.txt  bang_cards.yml  bot_info.yml  cpp_generator.py  parse_bang_cards.py  parse_bots.py  yaml_custom.py
src/effects/: CMakeLists.txt  effects.h  rulesets.h
(+1272 files in other folders)
