add_subdirectory(armedanddangerous)
add_subdirectory(base)
add_subdirectory(canyondiablo)
add_subdirectory(dodgecity)
add_subdirectory(fistfulofcards)
add_subdirectory(goldrush)
add_subdirectory(greattrainrobbery)
add_subdirectory(legends)
add_subdirectory(mostwanted)
add_subdirectory(highnoon)
add_subdirectory(valleyofshadows)
add_subdirectory(wildwestshow)
add_subdirectory(stickofdynamite)
add_subdirectory(crazy_greygory)